admin/style/style-ecrire.css
/* ECRIRE 
---------------------------------------------------------------------------------- */

/* apercu */
#apercu,
#form-ecrire {
	padding: 0 0 1px;
	clear: both;
}

#apercu {
	margin-bottom: 15px;
}

#apercu > h2 {
	background: #f0f0f0;
	border-radius: 3px 3px 0 0;
	padding: 10px 20px;
	border-bottom: 1px solid #ddd
}

#apercu > div {
	margin: 20px;
}

#apercu img {
	padding: 2px;
	border: 1px solid #ddd;
}

#form-ecrire {
	padding: 5px 5px 15px;
}

#form-ecrire textarea {
	resize: vertical;
}

#form-ecrire .main-form .text {
	width: 100%;
}

#titre {
	font-weight: bold;
	font-size: 1.15em;
}

#chapo_note {
	display: flex;
/*	overflow: hidden;*/
}

#form-ecrire #chapo {
	flex: 2 2 auto;
	width: auto;
}
#form-ecrire #notes {
	flex: 1 1 auto;
	width: auto;
}

#form-ecrire #chapo {
	border-right: 1px solid silver;
}

#type_tags,
#mots_cles {
	padding: 0 10px;
}

/* Boutons de formatage  */
p.formatbut {
	line-height: 28px;
	margin: 0; padding: 0px 5px 2px;
	background: #f5f5f5;
}

.formatbut .but {
	padding: 0;
	display: inline-block;
	text-align: center;
	vertical-align: middle;
	background: rgba(0, 0, 0, 0);
	height: 24px; width: 24px;
	border: 1px solid transparent;
	border-radius: 4px;
}

.formatbut .but:hover {
	transition: border-color .3s;
	border-color: silver;
}

.formatbut .but:active {
	border-color: gray;
	background: #cde6ff;
	background: linear-gradient(to top, white, #d6d6d6);
}

.formatbut .but > span:nth-of-type(1) {
	display: inline-block;
	width: 16px;
	height: 24px;
	background: no-repeat transparent url(formatx2.png) 0 0 / 24px 563px;
}

.formatbut span.spacer {
	margin: 0 4px;
	border-left: 1px solid #e5e5e5;
	border-right: 1px solid #fafafa
}

/* buttons : works in comment form and in article form */
#button01 > span:nth-of-type(1) { background-position: -4px   -1px; } /* bold */
#button02 > span:nth-of-type(1) { background-position: -4px  -21px; } /* ital */
#button03 > span:nth-of-type(1) { background-position: -4px  -42px; } /* underline */
#button04 > span:nth-of-type(1) { background-position: -4px  -82px; } /* strike */
#button05 > span:nth-of-type(1) { background-position: -4px -319px; } /* left align */
#button06 > span:nth-of-type(1) { background-position: -4px -293px; } /* center align */
#button07 > span:nth-of-type(1) { background-position: -4px -241px; } /* right align */
#button08 > span:nth-of-type(1) { background-position: -4px -267px; } /* justify */
#button09 > span:nth-of-type(1) { background-position: -4px  -62px; } /* link */
#button10 > span:nth-of-type(1) { background-position: -4px -102px; } /* quote */
#button11 > span:nth-of-type(1) { background-position: -4px -213px; } /* image */
#button12 > span:nth-of-type(1) { background-position: -4px -122px; } /* code */
#button13 > span:nth-of-type(1) { background-position: -4px -345px; } /* color edit */
#button14 > span:nth-of-type(1) { background-position: -4px -187px; } /* font size edit */
#button15 > span:nth-of-type(1) { background-position: -4px -376px; } /* unicode char insert */
#button16 > span:nth-of-type(1) { background-position: -4px -440px; } /* ul list */
#button17 > span:nth-of-type(1) { background-position: -4px -408px; } /* ol list */

.but-dropdown {
	position: relative;
}

.but-dropdown .list {
	display:none;
	padding: 3px;
	background-color: white;
	width: 140px;
	position: absolute;
	top: 24px;
	left: -1px;
	line-height: 20px;
	box-shadow: 0px 4px 8px rgba(0, 0, 0, .3);
}

.but-dropdown:hover .list {
	display: block;
}

/* list colors */
.but-dropdown .list-color button {
	display: inline-block;
	background: white;
	margin: 0 2px;
	width: 22px;
	height: 22px;
	padding: 3px;
	border: 1px solid transparent;
}

.but-dropdown .list-color button span {
	vertical-align: middle;
	border: 1px solid #ccc;
	margin: 0 auto;
	display: block;
	width: 12px;
	height: 12px;
}

.but-dropdown .list-color button:hover {
	background-color: #ddd;
}
.but-dropdown .list-color button:hover span {
	border-color: #888;
}

/* list sizes */
.but-dropdown .list-size {
	text-align: left;
	width: 160px;
	padding: 3px 0;
}

.but-dropdown .list-size button {
	color: black;
	padding: 2px;
	text-align: left;
	display: inline-block;
	background: white;
	margin: 0;
	width: 160px;
	height: 28px;
	margin-top: 3px;
	border: 1px solid transparent;
}

.but-dropdown .list-size button:first-of-type {
	height: 23px;
}

.but-dropdown .list-size button:last-of-type {
	height: 33px;
}

.but-dropdown .list-size button span {
	vertical-align: middle;
	margin: 0 auto;
}

.but-dropdown .list-size button:hover {
	background-color: #ddd;
}

/* list caractères unicodes */

.but-dropdown .list-spechr {
	text-align: left;
	width: 384px;
	height: 94px;
	padding: 3px;
}

.but-dropdown .list-spechr button {
	background: white;
	margin: 0 2px 2px 0;
	width: 22px;
	padding: 0;
	height: 22px;
	border: 1px solid #ddd;
	border-radius: 2px;
	text-align: center;
}

.but-dropdown .list-spechr button:hover {
	background-color: #ddd;
}

/* tags 
-------------------------------------------- */
#form-ecrire #wrap {
	padding: 0;
	margin: 0;
}

#tag_bloc {
	flex: 0;
	margin: 0;
	display: flex;
}

#selected { /* <ul> */
	margin: 0;
	padding: 0;
	list-style-type: none;
	box-shadow: 0 -1px 0 #dadada inset, 1px 0 0 #dadada;
}


#selected > li {
	display:inline-block;
	padding: 0 10px 0 7px;
	color: #333;
	background: #eee;
	border: 0;
	margin: 0 -3px 0 0;
	box-shadow: 1px 0px 0 #dadada inset, 0px -1px 0px #dadada inset;
	height: 36px;
	line-height: 36px;
	box-sizing: border-box;
	
}

#selected > li > a {
	display: inline-block;
	color: inherit;
	margin: 0px 5px 0px 8px;
	text-decoration: none;
	font-weight: bold;
}

#type_tags {
	flex: 1 1 100px;
	justify-content: flex-start;
	height: 36px;
}


/* boutons d’options et date */
#date-and-opts {
	margin-top: 30px;
	margin-bottom: 40px;
	display: flex;
}

#date-and-opts > div {
	flex: 1 1 auto;
}

#formheure input {
	background: #FAFAFA;
	padding: 11px 5px;
	box-shadow: 0 0 2px rgba(0, 0, 0, .2);
	border: 0;
	text-align: center;
	margin-left: 3px;
}

#opts {
	text-align: right;
}

#formdate,
#formheure,
#formstatut,
#formallowcomment {
	display: inline-block;
/*	vertical-align: middle;*/
	margin: 2px 25px;
	min-height: 40px;
}

#formstatut label,
#formallowcomment label {
	display: inline;
}


#formdate::before,
#formheure::before,
#formstatut::before,
#formallowcomment::before {
	vertical-align: middle;
	font-family: "icon"!important;
	font-size: 1.4em;
	line-height: 1;
}

#formdate::before {
	content: "\e918";
	color: rgba(252, 101, 101, 1);
}

#formheure::before {
	content: "\e908";
	color: rgba(50, 50, 50, 1);
}

#formstatut::before {
	content: "\e904";
	color: rgba(55, 110, 250, 1);
}

#formallowcomment::before {
	content: "\e91b";
	color: rgba(101, 234, 143, 1);
}

